chore: repository information
Signed-off-by: tison <wander4096@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "dsa-thu"
 version = "0.0.1"
 edition = "2021"
+license = "Apache-2.0"
+description = "This repository implements data structures and algorithms from the book of Tsinghua University with the same name."
+repository = "https://github.com/tisonkun/dsa-thu"
 
 [dependencies]
